colang-cli/tests/samples/features/structs/compile_error/unknown_field.co
struct Point {
  x: int;
  y: int;
}

fun main() {
  var p: Point;
  write p.z;
}
